Download functionality for files and pipelines (#3813)
* Moved JWT_SECRET to settings

* Added new Download API resource for handling download requests.

* Added 2 new frontend API resources for handling file and pipeline downloads. Added download code in FileBrowser component and on the pipelines page.

* Added new API route that leads to a new ResourceDownloadHandler, used for parsing dynamic links and serving files to the client

* Fixed code quality checks

* Fixed import instruction

* small improvements

* Fixed lint issues

* Fixed uuid

* added readability to api call

* Fixed policy issue

* Separated oAuth secret from download secret. Download secret generates randomly in the absence of a set value.

* Moved url building functionality to client. Server now only sends token. Consolidated url building and download commencing into one singular common utils script.

* Moved zipping and relative path generation to second call. Added error catching for trying to download files outside the project folder

* Fixed code ckecking issues

* Replace quotes to single quotes

* Replaced old Exception with a more suitable type

--- a/docs/development/variables/environment-variables.mdx
+++ b/docs/development/variables/environment-variables.mdx
@@ -70,6 +70,7 @@ These are the environment variables used in Mage.
 | `GIT_ACCESS_TOKEN`              | [More information](/production/data-sync/git-sync#git-sync-settings-as-environment-variables)                                                                             | See link                                                                 |
 | `HIDE_ENV_VAR_VALUES`           | Filter out environment variables in notebook output.                                                                                                            | 1                                                                        |
 | `JWT_SECRET`                    | Modify the json web token secret used for encoding and decoding access tokens. Defaults to `materia`.                                                           | `your_jwt_secret`                                                        |
+| `JWT_DOWNLOAD_SECRET`           | Modify the json web token secret used for encoding and decoding download tokens. Defaults to randomly generated string value. Use an explicit value in horizontally scalable deployments, e.g.: kubernetes, cloud deployments | `your_jwt_secret`    |
 | `LDAP_ADMIN_USERNAME`           | [More information](/production/authentication/overview#ldap)                                                                                                    | See link                                                                 |
 | `LDAP_SERVER`                   | [More information](/production/authentication/overview#ldap)                                                                                                    | See link                                                                 |
 | `LDAP_BIND_DN`                  | [More information](/production/authentication/overview#ldap)                                                                                                    | See link                                                                 |
