--- a/docs/integrations/observability/prometheus.mdx
+++ b/docs/integrations/observability/prometheus.mdx
@@ -6,7 +6,7 @@ sidebarTitle: "Prometheus"
 ## Enable Prometheus
 
 You will need to add `ENABLE_PROMETHEUS` environment variable as `true` in order to
-enable Prometheus style metrics on the <BASE_PATH>/metrics route.
+enable Prometheus style metrics on the \<BASE_PATH\>/metrics route.
 
 ## Prometheus metrics
 
