[xy] Fix extra package name for google-cloud-storage.

--- a/docs/getting-started/setup.mdx
+++ b/docs/getting-started/setup.mdx
@@ -140,7 +140,7 @@ Mage also has the following add-on packages:
 | azure                | `mage-ai[azure]`      | install Azure related packages                     |
 | clickhouse           | `mage-ai[clickhouse]` | use Clickhouse for data import or export           |
 | dbt                  | `mage-ai[dbt]`        | install dbt packages                               |
-| google-cloud-storage | `mage-ai[storage]`    | use Google Cloud Storage for data import or export |
+| google-cloud-storage | `mage-ai[google-cloud-storage]`    | use Google Cloud Storage for data import or export |
 | hdf5                 | `mage-ai[hdf5]`       | process data in HDF5 file format                   |
 | mysql                | `mage-ai[mysql]`      | use MySQL for data import or export                |
 | postgres             | `mage-ai[postgres]`   | use PostgreSQL for data import or export           |
