--- a/docs/production/configuring-production-settings/compute-resource.mdx
+++ b/docs/production/configuring-production-settings/compute-resource.mdx
@@ -203,7 +203,7 @@ name: example_pipeline
 ...
 ```
 
-Extra fields
+#### Extra fields
 
 | Field name              | Description                                                                                                                   | Example values              |
 | ----------------------- | ----------------------------------------------------------------------------------------------------------------------------- | --------------------------- |
