--- a/docs/production/configuring-production-settings/compute-resource.mdx
+++ b/docs/production/configuring-production-settings/compute-resource.mdx
@@ -203,11 +203,21 @@ name: example_pipeline
 ...
 ```
 
-The default wait timeout for the ECS task is 10 minutes. To customize the timeout, you can specify the `wait_timeout` (in seconds) field in `ecs_config`. Here is one example:
+#### Extra fields
+
+| Field name              | Description                                                                                                                   | Example values              |
+| ----------------------- | ----------------------------------------------------------------------------------------------------------------------------- | --------------------------- |
+| assign_public_ip        | Whether to assign public IP to the ECS task.                                                                                  | true/false (default: true)  |
+| enable_execute_command  | Whether to [enable execute command for debugging](https://docs.aws.amazon.com/AmazonECS/latest/developerguide/ecs-exec.html)  | true/false (default: false) |
+| wait_timeout            | The maximum wait time for the ECS task (in seoncds). The default wait timeout for the ECS task is 10 minutes.                 | 1200 (default: 600)         |
+
+Example config
 ```yaml
 ecs_config:
   cpu: 1024
   memory: 2048
+  assign_public_ip: false
+  enable_execute_command: true
   wait_timeout: 1200
 ```
 
