--- a/docs/_snippets/overview-shields.mdx
+++ b/docs/_snippets/overview-shields.mdx
@@ -10,7 +10,7 @@
       marginTop: "0.125rem",
       marginBottom: "0.125rem",
     }}
-    href="<https://pypi.org/project/mage-ai/>"
+    href="https://pypi.org/project/mage-ai/"
   >
     <img
       style={{
@@ -18,7 +18,7 @@
         cursor: "pointer",
       }}
       noZoom
-      src="<https://img.shields.io/pypi/v/mage-ai?color=orange>"
+      src="https://img.shields.io/pypi/v/mage-ai?color=orange"
       alt="Python package version"
     />
   </a>
@@ -30,7 +30,7 @@
       marginLeft: "0.25rem",
       cursor: "default",
     }}
-    href="<https://anaconda.org/conda-forge/mage-ai>"
+    href="https://anaconda.org/conda-forge/mage-ai"
   >
     <img
       style={{
@@ -38,7 +38,7 @@
         cursor: "pointer",
       }}
       noZoom
-      src="<https://anaconda.org/conda-forge/mage-ai/badges/version.svg>"
+      src="https://anaconda.org/conda-forge/mage-ai/badges/version.svg"
       alt="Anaconda version"
     />
   </a>
@@ -49,7 +49,7 @@
       marginBottom: "0.125rem",
       marginLeft: "0.25rem",
     }}
-    href="<https://github.com/mage-ai/mage-ai>"
+    href="https://github.com/mage-ai/mage-ai"
   >
     <img
       style={{
@@ -57,7 +57,7 @@
         cursor: "pointer",
       }}
       noZoom
-      src="<https://img.shields.io/github/stars/mage-ai/mage-ai?logo=github>"
+      src="https://img.shields.io/github/stars/mage-ai/mage-ai?logo=github"
       alt="GitHub Stars"
     />
   </a>
@@ -68,7 +68,7 @@
       marginBottom: "0.125rem",
       marginLeft: "0.25rem",
     }}
-    href="<https://hub.docker.com/r/mageai/mageai>"
+    href="https://hub.docker.com/r/mageai/mageai"
   >
     <img
       style={{
@@ -76,7 +76,7 @@
         cursor: "pointer",
       }}
       noZoom
-      src="<https://img.shields.io/docker/pulls/mageai/mageai.svg>"
+      src="https://img.shields.io/docker/pulls/mageai/mageai.svg"
       alt="Docker pulls"
     />
   </a>
@@ -87,7 +87,7 @@
       marginBottom: "0.125rem",
       marginLeft: "0.25rem",
     }}
-    href="<https://pepy.tech/project/mage-ai>"
+    href="https://pepy.tech/project/mage-ai"
   >
     <img
       style={{
@@ -95,7 +95,7 @@
         cursor: "pointer",
       }}
       noZoom
-      src="<https://static.pepy.tech/personalized-badge/mage-ai?period=total&units=international_system&left_color=grey&right_color=blue&left_text=pip%20installs>"
+      src="https://static.pepy.tech/personalized-badge/mage-ai?period=total&units=international_system&left_color=grey&right_color=blue&left_text=pip%20installs"
       alt="pip installs"
     />
   </a>
