--- a/docs/about/changelog.mdx
+++ b/docs/about/changelog.mdx
@@ -6,7 +6,7 @@ description: "Latest new features and changelog."
 <Card
   title="Changelog"
   icon="staff"
-  href="<https://github.com/mage-ai/mage-ai/releases>"
+  href="https://github.com/mage-ai/mage-ai/releases"
 >
   Learn more about the latest features and improvements
 </Card>
