--- a/docs/about/frequently-asked-questions.mdx
+++ b/docs/about/frequently-asked-questions.mdx
@@ -7,7 +7,7 @@ description: "Here are some frequently asked questions about Mage and our best a
 
 <img
     noZoom
-    class="hero"
+    class="hero inline"
     src="https://github.com/mage-ai/assets/blob/main/notion-faq.png?raw=True"
 />
 
