--- a/docs/about/statistics.mdx
+++ b/docs/about/statistics.mdx
@@ -8,7 +8,7 @@ description: "Please contribute usage statistics to help improve the developer e
 
 <img
   noZoom
-  class="hero"
+  class="hero inline"
   alt="Combine our powers"
   src="https://media2.giphy.com/media/0Av9l0VIc01y1isrDw/giphy.gif"
 />
