--- a/docs/authentication/permissions/overview.mdx
+++ b/docs/authentication/permissions/overview.mdx
@@ -8,7 +8,7 @@ description: "Create granular permissions for CRUD operations on any API endpoin
 
 <img
     noZoom
-    class="hero"
+    class="hero inline"
     alt="User defined permissions"
     src="https://i.pinimg.com/originals/4d/96/3b/4d963bcbda38f5981a3c83b8f99933ae.gif"
 />
