--- a/docs/authentication/permissions/permissions.mdx
+++ b/docs/authentication/permissions/permissions.mdx
@@ -6,7 +6,7 @@ description: "Create granular permissions for CRUD operations on any API endpoin
 ---
 
 <img
-    class="hero"
+    class="hero inline"
     noZoom
     alt="User defined permissions"
     src="https://media.tenor.com/NFeV9svhtREAAAAC/community-ken-jeong.gif"
