--- a/docs/authentication/permissions/roles.mdx
+++ b/docs/authentication/permissions/roles.mdx
@@ -6,7 +6,7 @@ description: "Add permissions to roles and add roles to users."
 ---
 
 <img
-    class="hero"
+    class="hero inline"
     noZoom
     alt="Roles"
     src="https://media3.giphy.com/media/l0HUbtILos6CdAtxu/giphy.gif"
