--- a/docs/community/contact.mdx
+++ b/docs/community/contact.mdx
@@ -5,7 +5,7 @@ title: "Contact"
 <Card
   title="Contact"
   icon="envelope"
-  href="mailto:<hello@mage.ai>"
+  href="mailto:<hello@mage.ai"
 >
   Send us an email
 </Card>
