--- a/docs/community/slack.mdx
+++ b/docs/community/slack.mdx
@@ -5,7 +5,7 @@ title: "Slack"
 <Card
   title="Slack"
   icon="slack"
-  href="<https://www.mage.ai/chat>"
+  href="https://www.mage.ai/chat"
 >
   Instantly chat with the team and other community members
 </Card>
