--- a/docs/community/twitter.mdx
+++ b/docs/community/twitter.mdx
@@ -5,7 +5,7 @@ title: "Twitter"
 <Card
   title="Twitter"
   icon="twitter"
-  href="<https://twitter.com/mage_ai>"
+  href="https://twitter.com/mage_ai"
 >
   Ready for funny memes?
 </Card>
