--- a/docs/contributing/documentation/overview.mdx
+++ b/docs/contributing/documentation/overview.mdx
@@ -5,7 +5,7 @@ description: "Like every other part of Mage, our documentation is open-source. R
 ---
 
 <img
-  class="hero"
+  class="hero inline"
   noZoom
   src="https://github.com/mage-ai/mage-ai/assets/59450879/769a5faf-37ea-453c-8bd6-83270366fe00"
 />
