--- a/docs/contributing/overview.mdx
+++ b/docs/contributing/overview.mdx
@@ -8,7 +8,7 @@ power-ups!"
 ---
 
 <img
-  class="hero"
+  class="hero inline"
   alt="Contributing"
   src="https://media.giphy.com/media/5cZbRBLhW4tc4/giphy.gif"
 />
