--- a/docs/dbt/docs.mdx
+++ b/docs/dbt/docs.mdx
@@ -63,8 +63,8 @@ Once you uncomment those resources, you should see an output `docs_service_ip` a
 
 ```bash
 Outputs:
-docs_service_ip = "<dbt_docs_ip>"
-service_ip = "<mage_ip>"
+docs_service_ip = "dbt_docs_ip"
+service_ip = "mage_ip"
 ```
 
 ### AWS
