--- a/docs/dbt/overview.mdx
+++ b/docs/dbt/overview.mdx
@@ -11,7 +11,7 @@ description: "Transform dbt with Mage."
 <div class="box">
 <img
   noZoom
-  class="hero"
+  class="hero inline"
   src="https://c.tenor.com/gbLWPf5HCsYAAAAC/devastator-constructicons.gif"
 />
 </div>
