--- a/docs/design/blocks/callbacks.mdx
+++ b/docs/design/blocks/callbacks.mdx
@@ -6,7 +6,7 @@ description: "A callback block is associated to another block. When the parent b
 
 <Note>Requires version `0.8.61` or greater.</Note>
 
-<img noZoom class="hero" alt="Callbacks" src="https://i.imgflip.com/3s2icl.jpg" />
+<img noZoom class="hero inline" alt="Callbacks" src="https://i.imgflip.com/3s2icl.jpg" />
 
 Callback blocks are part of your pipeline but don’t run as individual steps in your pipeline
 like data loader blocks, transformer blocks, etc.
