--- a/docs/design/blocks/dynamic-blocks.mdx
+++ b/docs/design/blocks/dynamic-blocks.mdx
@@ -3,14 +3,14 @@ title: "Dynamic blocks"
 description: "Use the output of a block to dynamically create more blocks."
 "og:image": "https://giffiles.alphacoders.com/126/126373.gif"
 ---
-
+<Frame>
 <img
   noZoom
-  class="img-hero"
+  class="hero inline"
   alt="Dynamic blocks"
   src="https://giffiles.alphacoders.com/126/126373.gif"
 />
-
+</Frame>
 A dynamic block will create multiple downstream blocks at runtime.
 
 The number of blocks it creates is equal to the number of items in the output data of the
