--- a/docs/design/core-abstractions.mdx
+++ b/docs/design/core-abstractions.mdx
@@ -25,6 +25,7 @@ Each pipeline is represented by a YAML file (here's an [example](https://github.
 
 <img
   alt="Pipeline"
+  class="inline"
   src="https://github.com/mage-ai/assets/blob/main/overview/mage-build.gif?raw=True"
 />
 
