--- a/docs/development/git/configure.mdx
+++ b/docs/development/git/configure.mdx
@@ -5,7 +5,7 @@ description: "This page will walk you through the process of authenticating with
 
 <img
     noZoom
-    class="hero"
+    class="hero inline"
     src="https://user-images.githubusercontent.com/78053898/198753409-c7c41a8d-c137-4273-bb3b-76ecc81f8ee2.png"
 />
 
