--- a/docs/guides/ai/overview.mdx
+++ b/docs/guides/ai/overview.mdx
@@ -8,7 +8,7 @@ icon: "microchip-ai"
 
 <img
     noZoom
-    class="hero"
+    class="hero inline"
     alt="Using artificial intelligence"
     src="https://steamuserimages-a.akamaihd.net/ugc/813376249149384255/EC3222795DC2961599F7FC0B69E0241C8EC7293E/?imw=5000&imh=5000&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false"
 />
