--- a/docs/guides/blocks/replicate-blocks.mdx
+++ b/docs/guides/blocks/replicate-blocks.mdx
@@ -7,7 +7,7 @@ description: "Reuse the same block multiple times within a single pipeline."
 
 <img
   noZoom
-  class="hero"
+  class="hero inline"
   alt="Replicate blocks"
   src="https://64.media.tumblr.com/7354b3e96228024e5ae2924814053f98/tumblr_pcpk4z3lX11sgefjfo9_500.gif"
 />
