--- a/docs/guides/community-examples.mdx
+++ b/docs/guides/community-examples.mdx
@@ -23,7 +23,7 @@ Shashank walks through a high-level overview of how to create data pipelines usi
 <iframe
   width="560"
   height="315"
-  src="<https://www.youtube.com/embed/wk9PLudonbg>"
+  src="https://www.youtube.com/embed/wk9PLudonbg"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -37,7 +37,7 @@ Using Mage and Python for orchestration and ingestion, Darshil walks through how
 <iframe
   width="560"
   height="315"
-  src="<https://www.youtube.com/embed/WpQECq5Hx9g>"
+  src="https://www.youtube.com/embed/WpQECq5Hx9g"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -51,7 +51,7 @@ Arul discusses the process of constructing an ETL (extract-transform-load) pipel
 <iframe
   width="560"
   height="315"
-  src="<https://www.youtube.com/embed/Jvr4Jm97rxY>"
+  src="https://www.youtube.com/embed/Jvr4Jm97rxY"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
