--- a/docs/guides/dbt/developing-dbt-in-mage.mdx
+++ b/docs/guides/dbt/developing-dbt-in-mage.mdx
@@ -12,7 +12,7 @@ description: "Learn how to develop your favorite dbt models in Mage."
 
 <img
     noZoom
-    class="hero"
+    class="hero inline"
     alt="dbt"
     src="https://www.getdbt.com/ui/img/social/facebook.png"
 />
