--- a/docs/guides/setup-dbt.mdx
+++ b/docs/guides/setup-dbt.mdx
@@ -5,7 +5,7 @@ icon: "table-tree"
 description: "⏰ Run dbt models in Mage in under a minute."
 ---
 
-<img noZoom class="hero" alt="dbt" src="https://www.getdbt.com/ui/img/social/facebook.png" />
+<img noZoom class="hero inline" alt="dbt" src="https://www.getdbt.com/ui/img/social/facebook.png" />
 
 ## About
 
