--- a/docs/integrations/observability/alerting-opsgenie.mdx
+++ b/docs/integrations/observability/alerting-opsgenie.mdx
@@ -63,7 +63,7 @@ Follow these steps to add that Opsgenie Configuration to your project settings:
         ...
       opsgenie_config:
         url: "https://api.eu.opsgenie.com/v2/alerts"
-        api_key: "<your_api_key>"
+        api_key: "your_api_key"
         priority: "P2" # Default P3
         tags: # Default empty
         - production
