--- a/docs/interactions/overview.mdx
+++ b/docs/interactions/overview.mdx
@@ -9,7 +9,7 @@ icon: "person-sign"
 
 <img
     noZoom
-    class="hero"
+    class="hero inline"
     alt="No-code UI interactions"
     src="https://media.tenor.com/eVXHLyK4c-kAAAAC/building-lego.gif"
 />
