--- a/docs/orchestration/global-data-products/overview.mdx
+++ b/docs/orchestration/global-data-products/overview.mdx
@@ -9,7 +9,7 @@ icon: "globe"
 
 <img
     noZoom
-    class="hero"
+    class="hero inline"
     alt="Global data products"
     src="https://j.gifs.com/0grLrN.gif"
 />
