--- a/docs/orchestration/triggers/schedule-pipelines.mdx
+++ b/docs/orchestration/triggers/schedule-pipelines.mdx
@@ -6,7 +6,7 @@ description: "Schedule pipelines to run periodically"
 
 <img
     noZoom
-    class="hero"
+    class="hero inline"
     alt="Schedule pipelines to run periodically"
     src="https://media.tenor.com/lyU9j2EckEUAAAAd/running-out-of-time-no-time.gif"
 />
