--- a/docs/production/data-sync/github.mdx
+++ b/docs/production/data-sync/github.mdx
@@ -6,7 +6,7 @@ description: "Authenticate with GitHub then pull from a remote repository, push 
 ---
 
 
-<img noZoom class="hero" alt="GitHub authentication" src="https://wallpapercave.com/dwp2x/wp3082255.jpg"/>
+<img noZoom class="hero inline" alt="GitHub authentication" src="https://wallpapercave.com/dwp2x/wp3082255.jpg"/>
 
 On the homepage in the left side navigation, click the link labeled <b>Version control</b>.
 The URL could look something like this: <http://localhost:6789/version-control>.
