--- a/docs/visualizations/dashboards.mdx
+++ b/docs/visualizations/dashboards.mdx
@@ -8,7 +8,7 @@ icon: "chart-tree-map"
 
 <img
     noZoom
-    class="hero"
+    class="hero inline"
     alt="Customizable dashboards"
     src="https://github.com/mage-ai/assets/blob/main/visualizations/demo.gif?raw=true"
 />
