--- a/docs/community/blog.mdx
+++ b/docs/community/blog.mdx
@@ -5,7 +5,7 @@ title: "Blog"
 <Card
   title="Blog"
   icon="book-open-cover"
-  href="<https://www.mage.ai/blog>"
+  href="https://www.mage.ai/blog"
 >
   Want to be entertained?
 </Card>
