--- a/docs/contributing/backend/testing/overview.mdx
+++ b/docs/contributing/backend/testing/overview.mdx
@@ -8,7 +8,7 @@ icon: "swords"
 
 <img
   noZoom
-  class="hero"
+  class="hero inline"
   alt="Testing"
   src="https://i.pinimg.com/originals/05/70/56/057056dae3c4c8a5c5426f6c458ba001.gif"
 />
