--- a/docs/data-integrations/configuration.mdx
+++ b/docs/data-integrations/configuration.mdx
@@ -8,7 +8,7 @@ description: "There are many ways to configure your data integration pipeline."
 
 <img
   noZoom
-  class="hero"
+  class="hero inline"
   alt="Configure data integrations"
   src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExNnFzZnZudjd1OGNnbmgxMmZjZm1pdHBoeTRmdzFwaWhmN2VicjRuaCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/rMGDB5lVFWg9O/giphy.gif"
 />
