--- a/docs/data-integrations/overview.mdx
+++ b/docs/data-integrations/overview.mdx
@@ -5,7 +5,7 @@ description: "Data integration is the process of synchronizing data between two 
 ---
 
 <img
-  class="hero"
+  class="hero inline"
   alt="Data integrations"
   src="https://www.radicalcompliance.com/wp-content/uploads/2021/02/data-meme.gif"
 />
