--- a/docs/design/blocks/sensor.mdx
+++ b/docs/design/blocks/sensor.mdx
@@ -4,9 +4,9 @@ description: "A sensor is a block that continuously evaluates a condition until 
 ---
 
 <img
-  alt="Python mecha"
+  noZoom
+  class="hero inline"
   src="https://github.com/mage-ai/assets/blob/main/blocks/grandwizard_a_big_mythical_spirit_like_eye_scanning_a_bunch_of__b030824d-801c-4f8d-a9bd-51f0681eaa78.png?raw=true"
-  width="300"
 />
 
 In your pipeline, you can add sensors that run continuously and only complete
